--- a/index.html
+++ b/index.html
@@ -112,9 +112,15 @@
         </div>
 
         <!-- call history  -->
-        <div class="w-120 p-7 bg-white flex justify-between  rounded-xl shadow-lg row-span-3">
-            <h2 class="font-semibold"><i class="fa-regular fa-clock text-[#5C5C5C]"></i> Call History</h2>
-            <button class="w-20 btn bg-[#00A63E] text-white rounded-3xl p-1">Clear</button>
+        <div class="w-120 p-7 bg-white   rounded-xl shadow-lg row-span-3">
+            <div class="flex justify-between">
+                <h2 class="font-semibold"><i class="fa-regular fa-clock text-[#5C5C5C]"></i> Call History</h2>
+            <button id="clear-history" class="w-20 btn bg-[#00A63E] text-white rounded-3xl p-1">Clear</button>
+            </div>
+
+            <ul id="history-list" class="mt-3 text-[#5c5c5c]">
+
+            </ul>
         </div>
 
         <!-- ambulance  -->
